--- a/torna-on-kubernetes/torna-deployment.yaml
+++ b/torna-on-kubernetes/torna-deployment.yaml
@@ -54,7 +54,7 @@ spec:
     spec:
       containers:
         - name: torna
-          image: tanghc2020/torna:latest
+          image: wugang2021/torna:latest
           imagePullPolicy: Always
           env:
               - name:  JAVA_OPTS
