--- a/sdk/sdk-java/pom.xml
+++ b/sdk/sdk-java/pom.xml
@@ -7,7 +7,7 @@
 
 	<name>torna-sdk</name>
 	<description>torna-sdk</description>
-	<url>https://gitee.com/durcframework/torna</url>
+	<url>https://github.com/wugang-hub/torna</url>
 
 	<licenses>
 		<license>
